--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -63,7 +63,7 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(lib1dir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_gusher_OBJECTS = main.$(OBJEXT) postgres.$(OBJEXT)
+am_gusher_OBJECTS = main.$(OBJEXT) postgres.$(OBJEXT) gtime.$(OBJEXT)
 gusher_OBJECTS = $(am_gusher_OBJECTS)
 gusher_LDADD = $(LDADD)
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
@@ -236,7 +236,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-gusher_SOURCES = main.c postgres.c
+gusher_SOURCES = main.c postgres.c gtime.c
 lib1dir = $(libdir)/gusher
 lib1_SCRIPTS = boot.scm
 AM_CFLAGS = -Wall -DLOCALLIB=\"$(libdir)\"
@@ -361,6 +361,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gtime.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/postgres.Po@am__quote@
 
