add simple text templating function
mainly intended for HTML composition. Template source text
is marked up with [[TOKENS]], which are filled from assoc-list.
Each key in the alist is a symbol whose upcase'd name is matched
against tokens in the template, which are replaced with the
key's corresponding string value.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -64,7 +64,7 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(lib1dir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_gusher_OBJECTS = main.$(OBJEXT) postgres.$(OBJEXT) gtime.$(OBJEXT) \
-	redis.$(OBJEXT) json.$(OBJEXT)
+	redis.$(OBJEXT) json.$(OBJEXT) template.$(OBJEXT)
 gusher_OBJECTS = $(am_gusher_OBJECTS)
 gusher_LDADD = $(LDADD)
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
@@ -237,7 +237,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-gusher_SOURCES = main.c postgres.c gtime.c redis.c json.c
+gusher_SOURCES = main.c postgres.c gtime.c redis.c json.c template.c
 lib1dir = $(libdir)/gusher
 lib1_SCRIPTS = boot.scm
 AM_CFLAGS = -Wall -DLOCALLIB=\"$(libdir)\"
@@ -367,6 +367,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/postgres.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/redis.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/template.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
