name change: redis -> cache

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -64,8 +64,8 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(lib1dir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_gusher_OBJECTS = main.$(OBJEXT) postgres.$(OBJEXT) gtime.$(OBJEXT) \
-	redis.$(OBJEXT) json.$(OBJEXT) template.$(OBJEXT) \
-	mongodb.$(OBJEXT)
+	cache.$(OBJEXT) json.$(OBJEXT) template.$(OBJEXT) \
+	mongodb.$(OBJEXT) gnotify.$(OBJEXT)
 gusher_OBJECTS = $(am_gusher_OBJECTS)
 gusher_LDADD = $(LDADD)
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
@@ -238,7 +238,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-gusher_SOURCES = main.c postgres.c gtime.c redis.c json.c template.c mongodb.c
+gusher_SOURCES = main.c postgres.c gtime.c cache.c json.c template.c mongodb.c gnotify.c
 lib1dir = $(libdir)/gusher
 lib1_SCRIPTS = boot.scm
 AM_CFLAGS = -Wall -DLOCALLIB=\"$(libdir)\"
@@ -363,12 +363,13 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cache.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gnotify.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gtime.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/json.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mongodb.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/postgres.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/redis.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/template.Po@am__quote@
 
 .c.o:
