--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -239,7 +239,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 gusher_SOURCES = main.c postgres.c gtime.c cache.c json.c template.c gnotify.c log.c http.c
-lib1dir = $(libdir)/gusher
+lib1dir = /var/lib/gusher
 lib1_SCRIPTS = boot.scm
 AM_CFLAGS = -Wall -I/usr/local/include/guile/2.0 -I/usr/include/libxml2 -DLOCALLIB=\"$(libdir)\"
 all: all-am
@@ -528,7 +528,7 @@ info: info-am
 
 info-am:
 
-install-data-am: install-lib1SCRIPTS
+install-data-am: install-data-local install-lib1SCRIPTS
 
 install-dvi: install-dvi-am
 
@@ -582,15 +582,21 @@ uninstall-am: uninstall-binPROGRAMS uninstall-lib1SCRIPTS
 	distclean distclean-compile distclean-generic distclean-tags \
 	distdir dvi dvi-am html html-am info info-am install \
 	install-am install-binPROGRAMS install-data install-data-am \
-	install-dvi install-dvi-am install-exec install-exec-am \
-	install-html install-html-am install-info install-info-am \
-	install-lib1SCRIPTS install-man install-pdf install-pdf-am \
-	install-ps install-ps-am install-strip installcheck \
-	installcheck-am installdirs maintainer-clean \
+	install-data-local install-dvi install-dvi-am install-exec \
+	install-exec-am install-html install-html-am install-info \
+	install-info-am install-lib1SCRIPTS install-man install-pdf \
+	install-pdf-am install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic pdf pdf-am ps ps-am tags tags-am uninstall \
 	uninstall-am uninstall-binPROGRAMS uninstall-lib1SCRIPTS
 
+
+install-data-local:
+	groupadd -f gusher
+	mkdir -p $(lib1dir)/kc
+	chown -R root:gusher $(lib1dir)
+	chmod -R g+w $(lib1dir)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
