use inotify for async intra-/inter-process signaling
Files in a designated directory are monitored by inotify and
touched/edited to signal subscribing processes asynchronously, to
facilitate event-driven operation.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -595,6 +595,7 @@ uninstall-am: uninstall-binPROGRAMS uninstall-lib1SCRIPTS
 install-data-local:
 	groupadd -f gusher
 	mkdir -p $(lib1dir)/kc
+	mkdir -p $(lib1dir)/signals
 	chown -R root:gusher $(lib1dir)
 	chmod -R g+sw $(lib1dir)
 
