--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -600,6 +600,9 @@ install-data-local:
 	mkdir -p $(lib1dir)/signals
 	chown -R root:gusher $(lib1dir)
 	chmod -R g+sw $(lib1dir)
+	mkdir -p /var/log/gusher
+	chown -R root:gusher /var/log/gusher
+	chmod -R g+sw /var/log/gusher
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
