--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = gusher
-gusher_SOURCES = main.c postgres.c gtime.c cache.c json.c template.c gnotify.c log.c http.c butter.c
+gusher_SOURCES = main.c postgres.c gtime.c cache.c json.c template.c gnotify.c log.c http.c butter.c messaging.c
 
 lib1dir = /var/lib/gusher
 lib1_SCRIPTS = boot.scm
@@ -14,4 +14,4 @@ lib1_SCRIPTS = boot.scm
 #	chown -R root:gusher /var/log/gusher
 #	chmod -R g+sw /var/log/gusher
 
-AM_CFLAGS = -Wall -I/usr/local/include/guile/2.0 -I/usr/include/libxml2 -DLOCALLIB=\"$(libdir)\"
+AM_CFLAGS = -Wall -I/usr/include/guile/2.0 -I/usr/include/postgresql -I/usr/include/libxml2 -DLOCALLIB=\"$(libdir)\"
