drop zmq pub-sub messaging
Implement this in Scheme instead, using http for transport.
For each subscription, create a "http-json" handler and register
the subscription in BDB file "subscriptions". For each event,
look up the message ID in "subscriptions" and send to each
subscriber.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = gusher
-gusher_SOURCES = main.c postgres.c gtime.c cache.c json.c template.c log.c http.c butter.c messaging.c
+gusher_SOURCES = main.c postgres.c gtime.c cache.c json.c template.c log.c http.c butter.c
 
 lib1dir = /var/lib/gusher
 lib1_SCRIPTS = boot.scm
