--- a/docker_build/Dockerfile.jessie
+++ b/docker_build/Dockerfile.jessie
@@ -1,6 +1,6 @@
 FROM debian:8.2
 MAINTAINER Pete Yadlowsky, pmy@linux.com
-RUN echo "build wheezy/gusher instance"
+RUN echo "build jessie/gusher instance"
 RUN apt-get -y update
 RUN apt-get -y upgrade
 RUN apt-get -y install apt-utils
