--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -18,6 +18,7 @@ RUN useradd -d /home/gusher -g gusher -m -s /bin/bash gusher
 RUN su -c "git clone https://github.com/pmyadlowsky/gusher.git" - gusher
 COPY build_gusher /home/gusher
 COPY launch_app /usr/local/bin/launch_app
+COPY set_tz /usr/local/bin/set_tz
 RUN chmod +x /home/gusher/build_gusher
 RUN su -c "/home/gusher/build_gusher" gusher
 RUN (cd ~gusher/gusher; make install; make clean)
