--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -7,7 +7,7 @@ COPY pamsu /etc/pam.d/su
 RUN apk add guile guile-dev
 RUN apk add jansson jansson-dev libuuid libxml2 libxml2-dev curl-dev
 RUN apk add libgcrypt libgcrypt-dev readline readline-dev
-RUN apk add postgresql-client postgresql-dev postgresql ssmtp
+RUN apk add postgresql-client postgresql-dev postgresql
 RUN apk add git gcc make automake autoconf
 RUN apk add tzdata
 RUN mkdir -p /var/lib/gusher
@@ -15,7 +15,7 @@ RUN addgroup gusher
 RUN chgrp -R gusher /var/lib/gusher
 RUN chmod -R g+w /var/lib/gusher
 RUN adduser -h /home/gusher -G gusher -s /bin/bash -D gusher
-RUN echo "force clone 2"
+RUN echo "force clone 5"
 RUN su -c "git clone https://github.com/pmyadlowsky/gusher.git" - gusher
 COPY build_gusher /home/gusher
 COPY launch_app /usr/local/bin/launch_app
